kube/kustomize/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  labels:
    name: personal-site
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - khayyam.me
    secretName: personal-site-tls
  rules:
  - host: khayyam.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: personal-site
            port: 
              number: 80
